// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render correct with orientation 1`] = `
.c2 {
  display: inline-block;
  padding: 0 1rem;
}

.c0 {
  background-color: #e0e0e0;
  display: block;
  width: 100%;
  min-width: 100%;
  height: 1px;
  margin: 24px 0;
  clear: both;
  display: table;
  margin: 16px 0;
  background-color: transparent;
  color: #191539;
  font-size: 1.125rem;
  font-weight: 500;
  text-align: center;
  white-space: nowrap;
}

.c0::before,
.c0::after {
  content: '';
  display: table-cell;
  position: relative;
  top: 50%;
  width: 50%;
  border-top: 1px solid;
  border-color: #e0e0e0;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c0::before {
  top: 50%;
  width: 5%;
}

.c0::after {
  top: 50%;
  width: 95%;
}

.c0 .c1 {
  display: inline-block;
  padding: 0 10px;
}

.c3 {
  background-color: #e0e0e0;
  display: block;
  width: 100%;
  min-width: 100%;
  height: 1px;
  margin: 24px 0;
  clear: both;
  display: table;
  margin: 16px 0;
  background-color: transparent;
  color: #191539;
  font-size: 1.125rem;
  font-weight: 500;
  text-align: center;
  white-space: nowrap;
}

.c3::before,
.c3::after {
  content: '';
  display: table-cell;
  position: relative;
  top: 50%;
  width: 50%;
  border-top: 1px solid;
  border-color: #e0e0e0;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c3::before {
  top: 50%;
  width: 95%;
}

.c3::after {
  top: 50%;
  width: 5%;
}

.c3 .c1 {
  display: inline-block;
  padding: 0 10px;
}

<div>
  <div
    class="c0"
    orientation="left"
    type="horizontal"
  >
    <span
      class="c1 c2"
    >
      Left Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="c3"
    orientation="right"
    type="horizontal"
  >
    <span
      class="c1 c2"
    >
      Right Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
</div>
`;

exports[`Divider should render correct with type vertical 1`] = `
.c0 {
  background-color: #e0e0e0;
  display: inline-block;
  position: relative;
  top: -0.06em;
  width: 1px;
  height: 0.9em;
  margin: 0 8px;
  vertical-align: middle;
}

<div>
  Text
  <div
    class="c0"
    type="vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
  <div
    class="c0"
    type="vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
</div>
`;

exports[`Divider should render correctly 1`] = `
.c2 {
  display: inline-block;
  padding: 0 1rem;
}

.c0 {
  background-color: #e0e0e0;
  display: block;
  width: 100%;
  min-width: 100%;
  height: 1px;
  margin: 24px 0;
  clear: both;
}

.c1 {
  background-color: #e0e0e0;
  display: block;
  width: 100%;
  min-width: 100%;
  height: 1px;
  margin: 24px 0;
  clear: both;
  display: table;
  margin: 16px 0;
  background-color: transparent;
  color: #191539;
  font-size: 1.125rem;
  font-weight: 500;
  text-align: center;
  white-space: nowrap;
}

.c1::before,
.c1::after {
  content: '';
  display: table-cell;
  position: relative;
  top: 50%;
  width: 50%;
  border-top: 1px solid;
  border-color: #e0e0e0;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c3 {
  background-color: #e0e0e0;
  display: block;
  width: 100%;
  min-width: 100%;
  height: 1px;
  margin: 24px 0;
  clear: both;
  border-top: 1px dashed;
  border-color: #e0e0e0;
  background-color: transparent;
}

<div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  <div
    class="c0"
    type="horizontal"
  />
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  <div
    class="c1"
    type="horizontal"
  >
    <span
      class="c2"
    >
      With Text
    </span>
  </div>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  <div
    class="c3"
    type="horizontal"
  />
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
</div>
`;
